fixed spacing for title and hamburger icon

--- a/client/src/Style/Menu.scss
+++ b/client/src/Style/Menu.scss
@@ -1,3 +1,9 @@
+
+#main-title {
+    color: white;
+    font-size: 30px;
+}
+
 #flyoutMenu {
     width: 100vw;
     height: 100vh;
