--- a/client/src/Style/MyBoard.scss
+++ b/client/src/Style/MyBoard.scss
@@ -7,7 +7,7 @@
 .board_menu {
     position: absolute;
     top: 5%;
-    left: 0;
+    left: 35px;
 }
 
 .myboard {
